--- a/src/app/modules/dashboard/evp-credit-dashboard/evp-credit-dashboard.component.html
+++ b/src/app/modules/dashboard/evp-credit-dashboard/evp-credit-dashboard.component.html
@@ -285,7 +285,7 @@
 
                         <thead>
                         <tr class="table-header-background">
-                            <th scope="col">SR. No</th>
+                            <th scope="col">S#</th>
                             <th scope="col">Name of Zone</th>
                             <th scope="col">Amount</th>
                         </tr>
