--- a/src/app/modules/dashboard/recovery-sam-division/recovery-sam-division.component.html
+++ b/src/app/modules/dashboard/recovery-sam-division/recovery-sam-division.component.html
@@ -210,7 +210,7 @@
                 <table class="table table-striped">
                     <thead>
                     <tr class="table-header-background">
-                        <th scope="col">Sr. #</th>
+                        <th scope="col">S #</th>
                         <th scope="col">Name Of Zone</th>
                         <th scope="col">Amount</th>
                         <th></th>
@@ -237,7 +237,7 @@
                 <table class="table table-striped">
                     <thead>
                     <tr class="table-header-background">
-                        <th scope="col">Sr. #</th>
+                        <th scope="col">S #</th>
                         <th scope="col">Name Of Zone</th>
                         <th scope="col">Amount</th>
                         <th></th>
