--- a/src/app/modules/dashboard/zonal-chief-dashboard/zonal-chief-dashboard.component.html
+++ b/src/app/modules/dashboard/zonal-chief-dashboard/zonal-chief-dashboard.component.html
@@ -206,7 +206,7 @@
                     <table class="table table-striped">
                         <thead>
                         <tr class="table-header-background">
-                            <th>Serial #</th>
+                            <th>S #</th>
                             <th>Branch</th>
                             <th>Disbursement</th>
                             <th>Recovery</th>
@@ -214,8 +214,8 @@
                             <th>SAM</th>
                             <th>Outstanding</th>
                             <th>Audit Paras</th>
-                            <th>Utilization</th>
-                            <th>Mutation</th>
+                            <th>Utilization (Pending for Verification)</th>
+                            <th>Mutation (Pending for Verification)</th>
 
                         </tr>
                         </thead>
