--- a/src/app/modules/dashboard/provincial-chief/provincial-chief.component.html
+++ b/src/app/modules/dashboard/provincial-chief/provincial-chief.component.html
@@ -125,6 +125,7 @@
 
                         <thead>
                         <tr class="table-header-background">
+                            <th scope="col">S #</th>
                             <th scope="col">Zone</th>
                             <th scope="col">Disbursement</th>
                             <th scope="col">Recovery</th>
@@ -134,7 +135,8 @@
                         </tr>
                         </thead>
                         <tbody *ngIf="CirclePositions">
-                        <tr *ngFor="let item of CirclePositions | paginate: { itemsPerPage: 5, currentPage: p }">
+                        <tr *ngFor="let item of CirclePositions | paginate: { itemsPerPage: 5, currentPage: p };let i=index">
+                            <td>{{i + 1}}</td>
                             <td>{{item.Name}}</td>
                             <td>{{item.TotalDisbursment}}</td>
                             <td>{{item.TotalRecovery}}</td>
