--- a/src/app/modules/loan/cl-legal-heirs/cl-legal-heirs.component.html
+++ b/src/app/modules/loan/cl-legal-heirs/cl-legal-heirs.component.html
@@ -66,7 +66,7 @@
                                     </ngx-mat-select-search>
                                 </mat-option>
 
-                                <mat-option *ngFor="let obj of RelationshipLov" [value]="obj.Id">
+                                <mat-option *ngFor="let obj of RelationshipLov" [value]="obj.LovId">
                                     {{obj.Name}}
                                 </mat-option>
 
