--- a/src/app/modules/dashboard/branch-manager-dashboard/branch-manager-dashboard.component.html
+++ b/src/app/modules/dashboard/branch-manager-dashboard/branch-manager-dashboard.component.html
@@ -214,8 +214,8 @@
                             <th>SAM</th>
                             <th>Outstanding</th>
                             <th>Audit Paras</th>
-                            <th>Utilization</th>
-                            <th>Mutation</th>
+                            <th>Utilization (PV)</th>
+                            <th>Mutation (PV)</th>
 
                         </tr>
                         </thead>
