--- a/src/app/modules/reports/account-statement/account-statement.html
+++ b/src/app/modules/reports/account-statement/account-statement.html
@@ -41,7 +41,8 @@
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2"
                                          style="width: 225px;">
                                         <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
-                                            <mat-label class="customMatLabel">LC NO</mat-label>
+                                            <mat-label class="customMatLabel">LC NO<strong
+                                                class="matMandatory">*</strong></mat-label>
                                             <input appNumberOnly autocomplete="off" formControlName="LcNO"
                                                    matInput maxlength="30" placeholder="Enter LC NO"/>
                                         </mat-form-field>
