--- a/src/app/modules/reports/account-statement/account-statement.html
+++ b/src/app/modules/reports/account-statement/account-statement.html
@@ -4,7 +4,7 @@
 
     <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
-            <div class="heading">Anonymous Report</div>
+            <div class="heading">Account Statement</div>
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
 
