--- a/src/app/modules/dashboard/regional-cheif/regional-cheif.component.html
+++ b/src/app/modules/dashboard/regional-cheif/regional-cheif.component.html
@@ -174,6 +174,7 @@
                             <td>{{'No Data'}}</td>
                             <td>{{'No Data'}}</td>
                             <td>{{'No Data'}}</td>
+                            <td>{{'No Data'}}</td>
                         </tr>
                         </tbody>
                     </table>
