--- a/src/app/modules/customer/check-eligibility/check-eligibility.component.html
+++ b/src/app/modules/customer/check-eligibility/check-eligibility.component.html
@@ -70,7 +70,6 @@
                                  style="background-color: #f6fcf8 !important;">
                                 <div class="row p-4">
                                     <h5 class="text-green">Summary</h5>
-                                    <p ngI>Customer is not eligible due to following reasons</p>
                                     <p>Customer is not eligible due to following reasons</p>
                                     <table class="col-lg-12">
                                         <tbody>
@@ -349,13 +348,13 @@
 
                         </div>
                         <div *ngIf="IsEcibDefaulter" class="form-group kt-form__group row">
-                            <div class="col-lg-12 kt-margin-bottom-20-mobile">
+                            <div class="col-lg-12 kt-margin     -bottom-20-mobile">
                                 <h5 class="heading">Summary</h5>
                                 <p class="text-red-500 mb-1">Customer is not eligible due to following reasons</p>
                                 <table class="col-lg-12 table-bordered mr-2">
                                     <thead class="table-header-background">
                                     <th class="p-2 w-3/12">Name</th>
-                                    <th class="p-2 w-9/12">Status</th>
+                                    <th claeess="p-2 w-9/12">Status</th>
                                     </thead>
                                     <tbody>
                                     <tr>
