--- a/src/app/layout/common/change-password/change-password.component.html
+++ b/src/app/layout/common/change-password/change-password.component.html
@@ -25,11 +25,11 @@
             <mat-icon
                 class="icon-size-5"
                 *ngIf="passwordField.type === 'password'"
-                [svgIcon]="'heroicons_solid:eye'"></mat-icon>
+                >visibility</mat-icon>
             <mat-icon
                 class="icon-size-5"
                 *ngIf="passwordField.type === 'text'"
-                [svgIcon]="'heroicons_solid:eye-off'"></mat-icon>
+                >visibility_off</mat-icon>
         </button>
     </mat-form-field>
 
@@ -44,11 +44,11 @@
             <mat-icon
                 class="icon-size-5"
                 *ngIf="newpasswordField.type === 'password'"
-                [svgIcon]="'heroicons_solid:eye'"></mat-icon>
+                >visibility</mat-icon>
             <mat-icon
                 class="icon-size-5"
                 *ngIf="newpasswordField.type === 'text'"
-                [svgIcon]="'heroicons_solid:eye-off'"></mat-icon>
+               >visibility_off</mat-icon>
         </button>
     </mat-form-field>
     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
@@ -62,11 +62,11 @@
             <mat-icon
                 class="icon-size-5"
                 *ngIf="confirmpasswordField.type === 'password'"
-                [svgIcon]="'heroicons_solid:eye'"></mat-icon>
+                >visibility</mat-icon>
             <mat-icon
                 class="icon-size-5"
                 *ngIf="confirmpasswordField.type === 'text'"
-                [svgIcon]="'heroicons_solid:eye-off'"></mat-icon>
+               >visibility_off</mat-icon>
         </button>
     </mat-form-field>
 
