--- a/src/@fuse/components/navigation/vertical/components/collapsable/collapsable.component.html
+++ b/src/@fuse/components/navigation/vertical/components/collapsable/collapsable.component.html
@@ -46,7 +46,7 @@
         <!-- Arrow -->
         <mat-icon
             class="fuse-vertical-navigation-item-arrow icon-size-4"
-            [svgIcon]="'heroicons_solid:chevron-right'"></mat-icon>
+           >keyboard_arrow_right</mat-icon>
 
     </div>
 
