--- a/src/app/layout/layouts/vertical/classic/classic.component.html
+++ b/src/app/layout/layouts/vertical/classic/classic.component.html
@@ -35,7 +35,7 @@
         <button
             mat-icon-button
             (click)="toggleNavigation('mainNavigation')">
-            <mat-icon [svgIcon]="'heroicons_outline:menu'"></mat-icon>
+            <mat-icon>menu</mat-icon>
         </button>
 
 
